--- a/my-vendor-app/src/app/components/order/order/order.component.html
+++ b/my-vendor-app/src/app/components/order/order/order.component.html
@@ -3,12 +3,11 @@
         <app-order-list></app-order-list>
     </div>
 
-    <div class="order-stat">
+    <div class="order-stat-add">
         <app-order-stat></app-order-stat>
     </div>
-    <br /> <br />
-    <br /> <br />
-    <br /> <br />
+    <br /><br /><br /><br /><br /> <hr>
+ 
     <div class="order-add">
         <app-order-add></app-order-add>
     
